# flex-and-bison

./: CMakeLists.txt  README.md
ch01-getting_started/: README.md
ch01-getting_started/calc/: CMakeLists.txt  calc.pro  main.c  parser.y  scanner.l
ch01-getting_started/wc/: CMakeLists.txt  scanner.l  wc.pro
ch02-lexical_analysis/: README.md
ch02-lexical_analysis/01-token_numbers1/: CMakeLists.txt  scanner.l  token.h
ch02-lexical_analysis/02-token_numbers2/: scanner.l  scanner2.pro  token.h
ch02-lexical_analysis/03-substitutions/: scanner3.pro
ch02-lexical_analysis/04-token_values/: CMakeLists.txt  scanner.l
ch02-lexical_analysis/05-states_and_comments/: main.c
ch02-lexical_analysis/06-resolving_ambiguous_patterns/: scanner.l  scanner6.pro
ch02-scanner/: README.md
ch02-scanner/01-token_numbers1/: scanner1.pro
ch02-scanner/02-token_numbers2/: CMakeLists.txt  scanner.l
ch02-scanner/03-substitutions/: CMakeLists.txt  scanner.l  token.h
ch02-scanner/04-token_values/: scanner.l  scanner4.pro
ch02-scanner/05-states_and_comments/: CMakeLists.txt  scanner.l  scanner5.pro
ch02-scanner/06-resolving_ambiguous_patterns/: CMakeLists.txt  Makefile
ch03-parser/: README.md
ch03-parser/01-shift_reduce_parsing/: CMakeLists.txt  main.c  parser.pro  scanner.l
ch03-parser/02-symbol_table/: CMakeLists.txt  parser.y  scanner.l  simple-calc.pro  symtab.c  symtab.h
ch04-input_management/: README.md
ch04-input_management/01-setting_yyin/: CMakeLists.txt  main.c  parser.pro  parser.y
ch04-input_management/02-input_buffers/: CMakeLists.txt  main.c  parser.pro
ch04-input_management/03-input_from_strings/: CMakeLists.txt  main.c  parser.pro  parser.y
ch05-reentrancy/: README.md
ch05-reentrancy/01-pure_scanner/: CMakeLists.txt  main.c  pure_scanner.pro  scanner.l  state.h
ch05-reentrancy/02-pure_parser/: CMakeLists.txt  README.md  ast.c  ast.h  main.c  parser.y  pure_parser.pro  scanner.l
doc/: 01-Using_Flex_and_Bison_On_Windows.md  01-using_flex_and_bison_on_windows.md  02-Implementation_of_REPL_Supporting_Mutiline_Statements.md  unistd.h
