CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

ADD_SUBDIRECTORY(ch01-getting_started/wc)
ADD_SUBDIRECTORY(ch01-getting_started/calc)

ADD_SUBDIRECTORY(ch02-lexical_analysis/01-token_numbers1)
ADD_SUBDIRECTORY(ch02-lexical_analysis/02-token_numbers2)
ADD_SUBDIRECTORY(ch02-lexical_analysis/03-substitutions)
ADD_SUBDIRECTORY(ch02-lexical_analysis/04-token_values)
ADD_SUBDIRECTORY(ch02-lexical_analysis/05-states_and_comments)
ADD_SUBDIRECTORY(ch02-lexical_analysis/06-resolving_ambiguous_patterns)
